--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <img src="/Users/sanghyunlee/IdeaProjects/WebProject2/book.png" class="mr-2" style="width: 50px; height: 50px;"> <!-- 이미지 파일의 경로를 지정하십시오 -->
     <h5 class="my-0 mr-md-auto font-weight-normal">이상현's Vocabulary 입니다.</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-      <a class="p-2 text-dark" href="#">Features</a>
+      <a class="p-2 text-dark" href="#">Featuresㅇ</a>
       <a class="p-2 text-dark" href="#">Enterprise</a>
       <a class="p-2 text-dark" href="#">Support</a>
       <a class="p-2 text-dark" href="#">Pricing</a>
