--- a/index.html
+++ b/index.html
@@ -114,132 +114,132 @@
           </thead>
           <tbody>
             <tr>
-              <td>1,001</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
-              <td>menu</td>
+              <td>1</td>
+              <td>*</td>
+              <td>apple</td>
+              <td>사과</td>
+              <td>2023.10.10</td>
+              <td><a href="edit.html"> <img src="pen.png" alt="" width="20" height="20"> </a><img src="trash.png" alt="" width="25" height="25" onclick="delete_check()"><a href="view.html"> <img src="magnifier.png" alt="" width="20" height="20"></a></td>
             </tr>
             <tr>
-              <td>1,002</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-              <td>menu</td>
+              <td>2</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,003</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,003</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,004</td>
-              <td>text</td>
-              <td>random</td>
-              <td>layout</td>
-              <td>dashboard</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,005</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>placeholder</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,006</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,007</td>
-              <td>placeholder</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>irrelevant</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,008</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,009</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,010</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,011</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,012</td>
-              <td>text</td>
-              <td>placeholder</td>
-              <td>layout</td>
-              <td>dashboard</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,013</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>visual</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,014</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
             <tr>
-              <td>1,015</td>
-              <td>random</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>text</td>
-              <td>menu</td>
+              <td>3</td>
+              <td>***</td>
+              <td>seperate</td>
+              <td>분리하다</td>
+              <td>2023.10.9</td>
+              <td><img src="pen.png" alt="" width="20" height="20"><img src="trash.png" alt="" width="25" height="25"></td>
             </tr>
           </tbody>
         </table>
@@ -273,5 +273,16 @@
 
       </div>
   </footer>
+
+  <script>
+    function delete_check() {
+      var result = confirm("정말로 삭제하시겠습니까?");
+      if(result){
+        alert("삭제 되었습니다.");
+      }else{
+        alert("삭제 명령을 취소 합니다. ");
+      };
+    }
+  </script>
   </body>
 </html>
