connect add html

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
           </div>
           <button type="button" class="btn btn-sm btn-outline-secondary">Search</button>
-          <button type="button" class="btn btn-sm btn-outline-secondary" id="add">Add</button>
-
+          <a href="add.html"><button type="button" class="btn btn-sm btn-outline-secondary" id="add">Add</button>
+          </a>
         </div>
       </div>
 
