add something function

--- a/add.html
+++ b/add.html
@@ -92,6 +92,9 @@
       alert("모든 필수 입력 필드를 작성해주세요.");
       return false;
     }
+    else{
+      alert("단어 추가 성공 ")
+    }
     return true;
   }
 </script>
